bu fixes